--- a/chapter02_mathematical-building-blocks.ipynb
+++ b/chapter02_mathematical-building-blocks.ipynb
@@ -19,7 +19,7 @@
         "id": "eNI_65lMSVfN"
       },
       "source": [
-        "# The mathematical building blocks of neural networks"
+        "# The mathematical building blocks of neural networks ... "
       ]
     },
     {
